force-app/main/default/objects/LLC_BI__EmailTemplate_Institution__c/LLC_BI__EmailTemplate_Institution__c.object-meta.xml
<CustomObject>
    <description>A financial institution can maintain distinct Communities for each of their branded institutions. This junction object is a link between email templates and the Institution object. Use this object to determine which emails are sent to users associated with a particular institution.</description>
    <label>Email Template Institution</label>
    <nameField>
        <displayFormat>ETI-{000000000}</displayFormat>
        <label>Email Template Institution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Template Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>