force-app/main/default/objects/LLC_BI__EmailTemplate_Institution__c/fields/LLC_BI__Email_Template_Purpose__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Email_Template_Purpose__c</fullName>
    <description>The data installer autopopulates this picklist field with the action or purpose the email template accomplishes. This enables the system to send the email template at the correct time. Best practice is to avoid manual edits to the field value.</description>
    <label>Email Template Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Document Assigned - Bulk</fullName>
            </value>
            <value>
                <fullName>Account Document Rejected</fullName>
            </value>
            <value>
                <fullName>Borrower Added (Existing)</fullName>
            </value>
            <value>
                <fullName>Borrower Added (New)</fullName>
            </value>
            <value>
                <fullName>Co-Owner Added (Existing)</fullName>
            </value>
            <value>
                <fullName>Co-Owner Added (New)</fullName>
            </value>
            <value>
                <fullName>Deposit Documents Assigned</fullName>
            </value>
            <value>
                <fullName>Deposit Document Rejected</fullName>
            </value>
            <value>
                <fullName>Guarantor Added (Existing)</fullName>
            </value>
            <value>
                <fullName>Guarantor Added (New)</fullName>
            </value>
            <value>
                <fullName>Loan Document Assigned Email - Bulk</fullName>
            </value>
            <value>
                <fullName>Loan Document Rejected Email</fullName>
            </value>
            <value>
                <fullName>Save and Continue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>