force-app/main/default/objects/LLC_BI__EmailTemplate_Institution__c/fields/LLC_BI__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__EmailTemplate__c</fullName>
    <description>Populate this text field with the Salesforce ID of the email template to be sent to users from the institution.</description>
    <inlineHelpText>Populate this text field with the Salesforce ID of the email template to be sent to users from the institution.</inlineHelpText>
    <label>Email Template</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>