force-app/main/default/objects/LLC_BI__EmailTemplate_Institution__c/fields/LLC_BI__Institution__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Institution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Use this lookup field to select the institution for which you are selecting email templates.</description>
    <label>Institution</label>
    <referenceTo>LLC_BI__Institution__c</referenceTo>
    <relationshipLabel>Institutions</relationshipLabel>
    <relationshipName>Institutions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>