force-app/main/default/objects/LLC_BI__EmailTemplate_Institution__c/fields/LLC_BI__lookupKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__lookupKey__c</fullName>
    <description>This field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. You can also use this field when importing data into nCino to efficiently associate related records without the need to know the internal ID for the record.</description>
    <externalId>true</externalId>
    <label>lookupKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>